--- a/TimberMan/proj.android/.cproject
+++ b/TimberMan/proj.android/.cproject
@@ -171,14 +171,14 @@
 	<storageModule moduleId="org.eclipse.cdt.core.LanguageSettingsProviders"/>
 	<storageModule moduleId="org.eclipse.cdt.internal.ui.text.commentOwnerProjectMappings"/>
 	<storageModule moduleId="cdtBuildSystem" version="4.0.0">
-		<project id="Runner.null.31159645" name="Runner"/>
+		<project id="TimberMan.null.31159645" name="TimberMan"/>
 	</storageModule>
 	<storageModule moduleId="refreshScope" versionNumber="2">
 		<configuration configurationName="Default">
-			<resource resourceType="PROJECT" workspacePath="/Runner"/>
+			<resource resourceType="PROJECT" workspacePath="/TimberMan"/>
 		</configuration>
 		<configuration configurationName="Debug">
-			<resource resourceType="PROJECT" workspacePath="/Runner"/>
+			<resource resourceType="PROJECT" workspacePath="/TimberMan"/>
 		</configuration>
 	</storageModule>
 </cproject>
