游戏可以显示

--- a/TimberMan/proj.win32/TimberMan.vcxproj.filters
+++ b/TimberMan/proj.win32/TimberMan.vcxproj.filters
@@ -24,9 +24,6 @@
     <ClCompile Include="..\Classes\GameScore.cpp">
       <Filter>src</Filter>
     </ClCompile>
-    <ClCompile Include="..\Classes\HelloWorldScene.cpp">
-      <Filter>src</Filter>
-    </ClCompile>
     <ClCompile Include="..\Classes\Timber.cpp">
       <Filter>src</Filter>
     </ClCompile>
@@ -34,6 +31,9 @@
       <Filter>src</Filter>
     </ClCompile>
     <ClCompile Include="..\Classes\TreeNode.cpp">
+      <Filter>src</Filter>
+    </ClCompile>
+    <ClCompile Include="..\Classes\GameScene.cpp">
       <Filter>src</Filter>
     </ClCompile>
   </ItemGroup>
@@ -50,9 +50,6 @@
     <ClInclude Include="..\Classes\GameScore.h">
       <Filter>src</Filter>
     </ClInclude>
-    <ClInclude Include="..\Classes\HelloWorldScene.h">
-      <Filter>src</Filter>
-    </ClInclude>
     <ClInclude Include="..\Classes\Timber.h">
       <Filter>src</Filter>
     </ClInclude>
@@ -60,6 +57,9 @@
       <Filter>src</Filter>
     </ClInclude>
     <ClInclude Include="..\Classes\TreeNode.h">
+      <Filter>src</Filter>
+    </ClInclude>
+    <ClInclude Include="..\Classes\GameScene.h">
       <Filter>src</Filter>
     </ClInclude>
   </ItemGroup>
