--- a/TimberMan/proj.win32/TimberMan.vcxproj
+++ b/TimberMan/proj.win32/TimberMan.vcxproj
@@ -140,7 +140,7 @@ xcopy /Y /Q "$(EngineRoot)external\websockets\prebuilt\win32\*.*" "$(OutDir)"</C
     <ClCompile Include="..\Classes\AppDelegate.cpp" />
     <ClCompile Include="..\Classes\GameOver.cpp" />
     <ClCompile Include="..\Classes\GameScore.cpp" />
-    <ClCompile Include="..\Classes\HelloWorldScene.cpp" />
+    <ClCompile Include="..\Classes\GameScene.cpp" />
     <ClCompile Include="..\Classes\Timber.cpp" />
     <ClCompile Include="..\Classes\TreeModel.cpp" />
     <ClCompile Include="..\Classes\TreeNode.cpp" />
@@ -150,7 +150,7 @@ xcopy /Y /Q "$(EngineRoot)external\websockets\prebuilt\win32\*.*" "$(OutDir)"</C
     <ClInclude Include="..\Classes\AppDelegate.h" />
     <ClInclude Include="..\Classes\GameOver.h" />
     <ClInclude Include="..\Classes\GameScore.h" />
-    <ClInclude Include="..\Classes\HelloWorldScene.h" />
+    <ClInclude Include="..\Classes\GameScene.h" />
     <ClInclude Include="..\Classes\Timber.h" />
     <ClInclude Include="..\Classes\TreeModel.h" />
     <ClInclude Include="..\Classes\TreeNode.h" />
